--- a/public/labs/lab_4/styles.css
+++ b/public/labs/lab_4/styles.css
@@ -1,10 +1,6 @@
-html, body {
-    margin: 0;
-    padding: 0;
-}
-html {
-    font-size: 10px;
-  
+* {
+  margin: 0;
+  padding: 0;
 }
 body{
     width: 70%;
@@ -26,12 +22,16 @@ h1{
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  padding-top: 12px;
+  padding-bottom: 12px;
 }
 
 .flex-outer > li > label,
 .flex-outer li p {
   flex: 1 0 125px;
   max-width: 225px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
  
 .flex-outer > li > label + *,
@@ -49,7 +49,7 @@ h1{
     border-radius: 5px;
   }
   .flex-inner li {
-    width: 75px;
+    width: 70px;
   }
 
   .flex-inner {
