--- a/public/labs/lab_3/styles.css
+++ b/public/labs/lab_3/styles.css
@@ -1,28 +1,63 @@
 /* Add some css styles based on the tutorial at javascript.info: introduction to browser events
  https://javascript.info/introduction-browser-events */
- * {
-  margin: 0;
-  padding: 0
+body {
+  padding: 10px;
 }
 
 .carousel {
   position: relative;
-  width: 700px;
-  height: 400px;
+  width: 398px;
+  padding: 10px 40px;
+  border: 1px solid #CCC;
+  border-radius: 15px;
+  background: rgb(79, 129, 33);
 }
 
-#arrow {
+.carousel img {
+  width: 130px;
+  height: 130px;
   display: block;
-  margin-top: 100px;
-  justify-content: center;
 }
+
 #left,
 #right {
-  align-self: center;
+  position: absolute;
+  top: 60px;
+  padding: 0;
   background: #ddd;
-  color: #444;
   border-radius: 15px;
-  text-align: center;
-  line-height: 25px;
-  font-size: 20px;      
+  border: 1px solid gray;
+  font-size: 24px;
+  line-height: 24px;
+  color: #444;
+  display: block;
+}
+
+.prev {
+  left: 7px;
+}
+
+.next {
+  right: 7px;
+}
+
+.gallery {
+  width: 390px;
+  overflow: hidden;
+}
+
+.gallery ul {
+  height: 130px;
+  width: 9999px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  transition: margin-left 250ms;
+  /* remove white-space between inline-block'ed li */
+  /* http://davidwalsh.name/remove-whitespace-inline-block */
+  font-size: 0;
+}
+
+.gallery li {
+  display: inline-block;
 }
